feature: signin with google oauth2.0

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # App
 APP_NAME=sakuin
 NODE_ENV=development
+FRONTEND_URL=http://localhost:3000
 PORT=3000
 
 # Database
@@ -8,3 +9,9 @@ MONGO_INITDB_ROOT_USERNAME=admin
 MONGO_INITDB_ROOT_PASSWORD=password123
 MONGO_INITDB_DATABASE=db_name
 MONGO_URI=mongodb://username:password@localhost:27017/sakuin?authSource=admin
+
+# Auth
+GOOGLE_CLIENT_ID=google_client_id
+GOOGLE_CLIENT_SECRET=google_client_secret
+GOOGLE_CALLBACK_URL='http://localhost:3000/auth/google/callback'
+JWT_SECRET_KEY=jwt_secret_key
